# zxing-cpp

./: .gitignore  CMakeLists.txt  build-wasm.sh
core/src/: Barcode.h  ReadBarcode.cpp  ReadBarcode.h  ReaderOptions.h
wasm/: zxing_bindings.cpp
wrappers/wasm/: BarcodeReader.cpp  CMakeLists.txt
